--- a/next-tooltip-customization/index.html
+++ b/next-tooltip-customization/index.html
@@ -8,9 +8,12 @@
     <!-- link jquery and next libraries -->
     <script type="text/javascript" src="./js/jquery-2.1.4.min.js"></script>
     <script type="text/javascript" src="./js/next-ui/js/next.js"></script>
+    <!-- link custom styles -->
+    <link rel="stylesheet" href="css/custom.css">
 </head>
 <body>
 <h1>HackZurich 2015 - Demo Application</h1>
+
 <div class="next-app"></div>
 <script type="text/javascript" src="./js/next-modules/data.js"></script>
 <script type="text/javascript" src="./js/next-modules/tooltip.js"></script>
