--- a/next-tooltip-customization/index.html
+++ b/next-tooltip-customization/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>HackZurich NeXt Demo</title>
+	<title>Customization of Tooltips and Data Binding | NeXt Demo</title>
 	<meta charset="utf-8">
 	<!-- linking styles -->
 	<link rel="stylesheet" href="./js/next-ui/css/next.css">
@@ -12,7 +12,7 @@
 	<link rel="stylesheet" href="css/custom.css">
 </head>
 <body>
-<h1>HackZurich 2015 - Demo Application</h1>
+<h1>Customization of Tooltips and Data Binding</h1>
 
 <div class="next-app"></div>
 <script type="text/javascript" src="./js/next-modules/data.js"></script>
