--- a/next-topologydata-export/index.html
+++ b/next-topologydata-export/index.html
@@ -17,6 +17,7 @@
 <div class="next-app"></div>
 <script type="text/javascript" src="./js/next-modules/data.js"></script>
 <script type="text/javascript" src="./js/next-modules/topology.js"></script>
+<script type="text/javascript" src="./js/next-modules/actionbar.js"></script>
 <script type="text/javascript" src="./js/shell.js"></script>
 </body>
 </html>
