--- a/next-odl-integration/index.html
+++ b/next-odl-integration/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>HackZurich NeXt Demo</title>
+	<title>ODL Integration & Remote Topology Data | NeXt Demo</title>
 	<meta charset="utf-8">
 	<!-- linking styles -->
 	<link rel="stylesheet" href="./js/next-ui/css/next.css">
@@ -10,7 +10,7 @@
 	<script type="text/javascript" src="./js/next-ui/js/next.js"></script>
 </head>
 <body>
-<h1>HackZurich 2015 - Demo Application</h1>
+<h1>ODL Integration & Remote Topology Data</h1>
 
 <div class="next-app"></div>
 <script type="text/javascript" src="./js/next-modules/data.js"></script>
