mvvp + collection finished

--- a/next-mvvp-collections/index.html
+++ b/next-mvvp-collections/index.html
@@ -5,12 +5,14 @@
 	<meta charset="utf-8">
 	<!-- linking styles -->
 	<link rel="stylesheet" href="./js/next-ui/css/next.css">
+	<link rel="stylesheet" href="./css/custom.css">
 	<!-- link jquery and next libraries -->
 	<script type="text/javascript" src="./js/jquery-2.1.4.min.js"></script>
 	<script type="text/javascript" src="./js/next-ui/js/next.js"></script>
 </head>
 <body>
 <h1>MVVP + Collections</h1>
+
 <div class="next-app"></div>
 
 <!-- loading views -->
